# manifest

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml
backend/: config.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py
cli/: README.md  SKILL.md  pyproject.toml
cli/manifest_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py  repl.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  UserContext.jsx  api.js  main.jsx  styles.css  utils.js
frontend/src/components/: FacetSidebar.jsx  Header.jsx  Markdown.jsx  RepoCard.jsx
frontend/src/pages/: Browse.jsx  Home.jsx  Profile.jsx  RepoForm.jsx  RepoPage.jsx
launcher/: README.md  pyproject.toml
launcher/manifest_hub/: __init__.py  cli.py
tests/: README.md  conftest.py  requirements-test.txt  test_cli_behavior.py  test_edge_cases.py  test_files.py  test_health_stats.py  test_repos_crud.py  test_search_sort_pagination.py  test_users.py  test_validation.py
