[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest-cli"
version = "1.0.0"
description = "Agent-native command-line interface for the Manifest model & dataset repository"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.scripts]
manifest = "manifest_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["manifest_cli*"]
