[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest-cli"
version = "1.0.0"
description = "Agent-native command-line interface for the Manifest model & dataset repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["manifest", "cli", "models", "datasets", "agent", "self-hosted"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/fbobe321/manifest"
"Docker image" = "https://hub.docker.com/r/fbobe3/manifest"

[project.scripts]
manifest = "manifest_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["manifest_cli*"]
