[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manifest-hub"
version = "1.0.0"
description = "One-command launcher for the Manifest model & dataset hub Docker image"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["manifest", "docker", "models", "datasets", "self-hosted", "launcher"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
# Zero runtime dependencies — stdlib only. It just orchestrates `docker`.
dependencies = []

[project.urls]
Homepage = "https://github.com/fbobe321/manifest"
"Docker image" = "https://hub.docker.com/r/fbobe3/manifest"

[project.scripts]
manifest-hub = "manifest_hub.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["manifest_hub*"]
